[package]
name = "m3"
version = "1.1.0"
authors = ["Francesco Michele Barranca kalairendev@francescobarranca.dev"]
license = "GPL-3.0"
description = "Minecraft Mod Manager - A package manager to install, update and search through mods from modrinth.com"
readme = "README.md"
homepage = "https://github.com/Francesco99975/m3"
repository = "https://github.com/Francesco99975/m3"
keywords = ["cli", "search", "package manager", "minecraft", "game", "install", "update", "mods", "modding"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.5"
colored = "2.0.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_derive = "1.0.188"
clap = { version = "4.4.6", features = ["derive"] }
async-recursion = "1.0.5"
tabled = "0.14.0"
